@@ -201,7 +201,6 @@ public:
 		// petra = 4,
 		// met = 5,
 		no_spell_casting = 6,
-		zombie = 7,
 		naked = 8,
 		dont_move = 9
 		};
