@@ -1,5 +1,8 @@
 2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* actorio.cc,flags.h,actors.h:  Figured out that 'zombie' is
+	referred to as flag 30 in usecode functions.
+
 	* schedule.cc (Street_maintenance_schedule): Don't follow Avatar
 	if Avatar is under Usecode control.
 	* intrinsics.cc:  update_last_created() no longer checks for a spot.
